# short_link

./: .env.example  .gitignore  README.md  database.py  docker-compose.prod.yaml  docker-compose.yaml  main.py  pyproject.toml  repository.py  router.py  schemas.py  services.py
backend/: .dockerignore  Dockerfile  app.py  config.py  pyproject.toml
backend/api/routers/: redirect.py  tasks.py
backend/cache/: __init__.py  redis.py  task_cache.py
backend/db/: init_db.py  models.py  session.py
backend/repositories/: mappers.py  task.py
backend/schemas/: __init__.py  task.py
backend/services/: short_link.py  task.py  url.py
backend/tests/: conftest.py  test_router.py  test_services.py  test_task_cache.py  test_task_repository.py  test_task_service.py  test_url_service.py
docker/postgres/init/: 01-collation.sql
docker/scripts/: init-letsencrypt.sh  reindex-tasks.sh
frontend/: .gitignore
frontend/app/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/app/nginx/docker/: docker-entrypoint.sh
frontend/app/nginx/docker/templates/: default.conf.template  ssl.conf.template
frontend/app/src/: App.tsx  index.css
frontend/app/src/components/: CTA.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Stats.tsx
tests/: conftest.py  test_repository.py  test_router.py  test_services.py
