[project]
name = "shortlink-givinity"
version = "0.1.0"
description = ""
authors = [
    {name = "givinity",email = "sazh.user@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.5,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "anyio (>=4.12.1,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long
    "B008",   # function calls in defaults
]

[tool.ruff.lint.isort]
known-first-party = [
    "app",
    "config",
    "api",
    "db",
    "schemas",
    "repositories",
    "services",
    "cache",
]

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["."]

[tool.pylint.main]
init-hook = 'import sys; sys.path.insert(0, "%(here)s")'

